--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "sweetalert": "^2.1.2",
         "vue-router": "^3.1.6",
         "vuetify": "^2.2.17",
         "vuex": "^3.1.3"
